[WHLSL] Code that accesses an undefined variable crashes https://bugs.webkit.org/show_bug.cgi?id=198775

Reviewed by Myles C. Maxfield.

Source/WebCore:

Myles mostly fixed this in r246631 when he made NameResolver propagate
its error to its parent NameResolver. However, there was still one bug
where we ended up calling setError twice for an if statement. This patch
fixes that and adds tests.

Tests: webgpu/whlsl-use-undefined-variable-2.html
       webgpu/whlsl-use-undefined-variable.html

* Modules/webgpu/WHLSL/WHLSLNameResolver.cpp:
(WebCore::WHLSL::NameResolver::visit):

LayoutTests:

* webgpu/whlsl-use-undefined-variable-2-expected.txt: Added.
* webgpu/whlsl-use-undefined-variable-2.html: Added.
* webgpu/whlsl-use-undefined-variable-expected.txt: Added.
* webgpu/whlsl-use-undefined-variable.html: Added.


Canonical link: https://commits.webkit.org/213086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246700 268f45cc-cd09-0410-ab3c-d52691b4dbfc